--- a/index.html
+++ b/index.html
@@ -47,9 +47,11 @@
 					</div>
 
 					<div class="container-login100-form-btn">
-						<button class="login100-form-btn" onclick="source.html">
+						<a href="source.html">
+						<button class="login100-form-btn" >
 							Login
 						</button>
+						</a>
 					</div>
 
 					<div class="text-center p-t-90">
