--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					</div>
 
 					<div class="container-login100-form-btn">
-						<a href="source.html">
+						<a href="parent.location='source.html'">
 						<button class="login100-form-btn" >
 							Login
 						</button>
