--- a/index.html
+++ b/index.html
@@ -47,11 +47,9 @@
 					</div>
 
 					<div class="container-login100-form-btn">
-						<a href="parent.location='source.html'">
-						<button class="login100-form-btn" >
+						<button class="login100-form-btn" onsubmit="parent.location='source.html'">
 							Login
 						</button>
-						</a>
 					</div>
 
 					<div class="text-center p-t-90">
