--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 					</div>
 
 					<div class="container-login100-form-btn">
-						<button class="login100-form-btn" onsubmit="/source.html'">
+						<button class="login100-form-btn" onsubmit="location='source.html'">
 							Login
 						</button>
 					</div>
