--- a/index.html
+++ b/index.html
@@ -47,9 +47,12 @@
 					</div>
 
 					<div class="container-login100-form-btn">
-						<button class="login100-form-btn" onclick="location='source.html'">
+						<button id="hello123" class="login100-form-btn">
 							Login
 						</button>
+						<script>
+$('#hello123').on('click', function() { window.location = 'http://www.google.com'; });
+</script>
 					</div>
 
 					<div class="text-center p-t-90">
