--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 					<div class="container-login100-form-btn">
 					
-						<button class="login100-form-btn" onclick="parent.location='source.html'">
+						<button class="login100-form-btn" onclick="source.html">
 							Login
 						</button>
 						
